--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammadyusuf</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link rel="stylesheet" href="index2.html">
+    </head>
 <body>
     <div class="wrapper-all container">
 
         <header class="header-top">
 
             <nav>
+                <a href="#" class="menu">
+                <span class="material-symbols-outlined">
+                    menu
+                    </span>
+                </a>
                 <a href="#">Home</a>
                 <a href="#">Men haqimda</a>
                 <a href="#">Natijalar</a>
