--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,10 @@
             <a href="#" class="websites">The created websites</a>
             <a href="#" class="certificates">Certificates</a>
         </div>
+        <div class="image">
+            <img src="https://thumbs.dreamstime.com/z/showing-upward-15525322.jpg?w=992" alt="">
+            
+        </div>
     </main>
 </body>
 </html>
