--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="header-top">
 
             <nav>
-                <a href="#" class="menu">
+                <a href="index2.html" class="menu">
                 <span class="material-symbols-outlined">
                     menu
                     </span>
