--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <a href="#">Natijalar</a>
                 <a href="#">Bajargan ishlar</a>
             </nav>
-            <div class="men-haqimda">
+            <div id="men-haqimda">
 
-                <h1 class="men">Muhammadyusuf Furqatov</h1>
+                <h1 id="men">Muhammadyusuf Furqatov</h1>
                 <div class="for-image">
                 <img src="./assets/Untitled (5) - Copy.png" alt="" class="photo">
 
@@ -84,7 +84,7 @@
     </div>
     <div class="clients">
         
-        <h1 class="center">Bajargan ishlari</h1>
+        <h1 id="center">Bajargan ishlari</h1>
 
         <div class="wrapper-2">
 
@@ -122,7 +122,7 @@
     </div>
     <div class="certikat">
 
-        <h1 class="setifikatlar">Sertifikatlar</h1>
+        <h1 id="sertifikatlar">Sertifikatlar</h1>
     </div>    
     
 
