--- a/index2.html
+++ b/index2.html
@@ -10,10 +10,10 @@
     <main>
         <h1>Welcome to muhammadyusuf furqatov website</h1>
         <div class="wrapper">
-            <a href="#" class="menus">About us</a>
-            <a href="#" class="works">The innovations</a>
-            <a href="#" class="websites">The created websites</a>
-            <a href="#" class="certificates">Certificates</a>
+            <a href="#men-haqimda" class="menus">About us</a>
+            <a href="#center" class="works">The innovations</a>
+            <a href="#center" class="websites">The created websites</a>
+            <a href="#sertifikatlar" class="certificates">Certificates</a>
         </div>
         <div class="image">
             <img src="https://thumbs.dreamstime.com/z/showing-upward-15525322.jpg?w=992" alt="">
