--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
         <div class="ieltss">
             <h2 class="setifikat">Ielts ceritificate</h2>
-            <a href="./asset/ielts.jpg.pdf" class="ielts">Bu yerdan yuklab ol</a>
-            <a href="./asset/ielts.jpg.pdf" class="certi">
+            <a href="./asset/_ielts.jpg.pdf" class="ielts">Bu yerdan yuklab ol</a>
+            <a href="./asset/_ielts.jpg.pdf" class="certi">
                 <img src="./assets/folder_open_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="" class="certi-child">
             </a>
         </div>
@@ -143,8 +143,8 @@
         
         <div class="ieltss">
             <h2 class="setifikat">Cefr sertifikati</h2>
-            <a href="./asset/ielts.jpg.pdf" class="ielts">Bu yerdan yuklab ol</a>
-            <a href="./asset/ielts.jpg.pdf" class="certi">
+            <a href="./asset/_ielts.jpg.pdf" class="ielts">Bu yerdan yuklab ol</a>
+            <a href="./asset/_ielts.jpg.pdf" class="certi">
                 <img src="./assets/folder_open_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="" class="certi-child">
             </a>
         </div>
