add nav tag to the second html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <div class="inside">
         
-            <a href="https://t.me/furqatov_m" class="logoss">
+            <a href="https:ic//t.me/furqatov_m" class="logoss">
                 <img src="./asset/telegram-logo.jpeg" alt="" class="instagramm">
                 <span class="insta">Muhammadyusuf</span>
             </a>
