--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
                     menu
                     </span>
                 </a>
-                <a href="#">Home</a>
-                <a href="#">Men haqimda</a>
-                <a href="#">Natijalar</a>
-                <a href="#">Bajargan ishlar</a>
+                <div class="wrapperlink">
+
+                    <a href="#">Home</a>
+                    <a href="#">Men haqimda</a>
+                    <a href="#">Natijalar</a>
+                    <a href="#">Bajargan ishlar</a>
+                </div>
+
             </nav>
             <div id="men-haqimda">
 
