--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
             </nav>
-            <div id="men-haqimda">
+            <section id="men-haqimda">
 
                 <h1 id="men">Muhammadyusuf Furqatov</h1>
                 <div class="for-image">
@@ -45,7 +45,7 @@
 
 
 
-            </div>
+            </section>
 
 
 
