--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="wrapperlink">
 
                     <a href="#">Home</a>
-                    <a href="#">Men haqimda</a>
+                    <a href="#men-haqimda">Men haqimda</a>
                     <a href="#">Natijalar</a>
                     <a href="#">Bajargan ishlar</a>
                 </div>
